Fix layout gap spacing and alignments

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1956,6 +1956,11 @@ p {
   margin: 5px;
 }
 
+.columns {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .planet-box img {
   margin: 0 auto;
   display: block;
