--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -2,3 +2,4 @@
 // Body
 $body-bg: rgb(28, 37, 43);
 
+$column-gap: 10px;
