--- a/resources/assets/sass/layout/_planets.scss
+++ b/resources/assets/sass/layout/_planets.scss
@@ -21,6 +21,11 @@
   margin: 5px;
 }
 
+.columns {
+    margin-left: 0;
+    margin-right: 0;
+}
+
 .planet-box img {
   margin: 0 auto;
   display: block;
